auto-complete sur le champ Namespace

--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -35,3 +35,10 @@ body {
 	border: 1px solid grey;
 	width: 60px;
 }
+
+
+body .ui-state-focus{
+	background : none !important;
+	color: black !important;
+	border: none !important;
+}
